Added test for JAXBListingHandler. Fixed a bug in JAXBOrigamiHandler - it couldn't delete temp files because it didn't properly close the open streams.